# BacSC

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
BacSC/: ClusterDE.py  NB_est.py  __init__.py  clustering_opt.py  countsplit.py
analysis/: Ecoli_technology_compare.ipynb  dataset_summaries.ipynb  technical_figures.ipynb
analysis/B_subt_Rosenthal/: Bsub_damage_cluster_analysis.ipynb  Bsub_minmed_additional_anaylsis.ipynb  Bsub_minmed_cluster_analysis-Copy1.ipynb  Bsub_minmed_cluster_analysis.ipynb  Bsub_minmed_cluster_analysis_equal_groupsize_4.ipynb  Bsub_minmed_summary_figures.ipynb  MPA_cluster_analysis.ipynb  MPA_summary_figures.ipynb  Sporulation_cluster_analysis.ipynb  Sporulation_summary_figures.ipynb  first_look_Bsub_minmed.ipynb
analysis/BacDrop_data/: 4species_BacDrop_final_pipeline.ipynb  Ecoli_BacDrop_cluster_analysis.ipynb  Ecoli_BacDrop_final_pipeline.ipynb  Ecoli_Summary_figures.ipynb  Enterococcus_BacDrop_cluster_analysis.ipynb  Enterococcus_Summary_figures.ipynb  Klebsiella_4species_BacDrop_cluster_analysis.ipynb  Klebsiella_4species_BacDrop_final_pipeline.ipynb  Klebsiella_4species_Summary_figures.ipynb  Klebsiella_BIDMC35_Summary_figures.ipynb  Klebsiella_BIDMC35_cluster_analysis.ipynb  Klebsiella_antibiotics_Summary_figures.ipynb  Klebsiella_antibiotics_cluster_analysis.ipynb  Klebsiella_untreated_Summary_figures.ipynb  Klebsiella_untreated_cluster_analysis.ipynb  (+6 more)
tools/: ClusterDE.py  NB_est.py  NMD.py  clustering_opt.py  countsplit.py  near_corr.py  nuclear_norm_init.py  scDEED.py  scTransform.py  select_R_scale.ipynb  util.py  util_plot.py  util_probe.py
tutorial_data/: filtered_feature_bc_matrix_Bsub_minimal_media.h5
tutorials/: BacSC_cluster_analysis_tutorial.ipynb  BacSC_tutorial_general_pipeline.ipynb
(+64 files in other folders)
